[package]
description = "Recursive-length prefix encoding, decoding, and compression"
license = "GPL-3.0"
name = "proto"
version = "0.0.0"
authors = ["gguoss"]

[dependencies]
protobuf = { version = "^1.0.0"}
elastic-array = { git = "https://github.com/ethcore/elastic-array" }
ethcore-bigint = { path = "../bigint" }
lazy_static = "0.2"
rustc-serialize = "0.3"
